<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="a461lapp.perry.Notification"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5sp"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:text="Task" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:text="Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_toRightOf="@+id/setTime"
        android:id="@+id/changedTime"
        android:layout_weight="0.15"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>

    <Button
        android:id="@+id/setTime"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/setTime"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Set Time" />

    <TextView
        android:text="Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/changedDate"
        android:layout_weight="0.15"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/setDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setDate"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Set Date" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Alarm"
        android:id="@+id/checkBox"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:fontFamily="sans-serif"
        android:textSize="18sp" />

    <ImageButton
        android:layout_width="92dp"
        android:layout_height="87dp"
        android:layout_gravity="center"
        android:src="@drawable/trash"
        android:id="@+id/deleteButton"
        android:background="@android:color/transparent" />

    <ImageButton
        android:layout_width="92dp"
        android:layout_height="87dp"
        android:layout_gravity="center"
        android:src="@drawable/stopbutt"
        android:id="@+id/StopButton"
        android:background="@android:color/transparent" />


</LinearLayout>
