<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a461lapp.perry.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createAlarm"
        android:text="+"
        android:layout_marginLeft="22dp"
        android:layout_alignBaseline="@+id/alarmName"
        android:layout_alignBottom="@+id/alarmName"
        android:layout_toRightOf="@+id/alarmName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Enter Task Name"
        android:ems="10"
        android:id="@+id/alarmName"
        android:layout_marginTop="16dp"
        android:maxLength="15"/>

    <ListView
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:id="@+id/table"
        android:layout_below="@id/alarmName"
        android:clickable="false" />

</RelativeLayout>
