<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Time"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time Set:"
        android:id="@+id/time_activity_text_view"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/time_activity_confirm_button"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_activity_time_picker"
        android:layout_marginTop="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:headerBackground="@color/colorSecondary" />

    <TextView
        android:text="Set time for alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/timeHeader"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Change Time"
        android:id="@+id/time_activity_confirm_button"
        android:layout_weight="0.03"
        android:layout_marginBottom="31dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>